<resources>
    <string name="app_name">Ebay Product Search</string>

    <!-- Shared Preference -->
    <string name="shared_preference_file_key">edu.gyaneshm.ebay_product_search.shared_preference</string>

    <!-- Main Activity -->
    <string name="tab_text_1">Search</string>
    <string name="tab_text_2">Wish List</string>

    <!-- Search -->
    <string name="search_keyword">Keyword</string>
    <string name="search_keyword_hint">Enter Keyword</string>
    <string name="search_keyword_error">Please enter mandatory field</string>

    <string name="search_category">Category</string>

    <string name="search_condition">Condition</string>
    <string name="search_condition_new">New</string>
    <string name="search_condition_used">Used</string>
    <string name="search_condition_unspecified">Unspecified</string>

    <string name="search_shipping">Shipping</string>
    <string name="search_shipping_local">Local Pickup</string>
    <string name="search_shipping_free">Free Shipping</string>

    <string name="search_enable_nearby_location">Enable Nearby Search</string>
    <string name="search_location_miles_hint">Miles from</string>
    <string name="search_location_from">From</string>
    <string name="search_location_current">Current Location</string>
    <string name="search_location_zipcode_hint">zipcode</string>
    <string name="search_zipcode_error">Please enter mandatory field</string>

    <string name="search_button">Search</string>
    <string name="search_clear_button">Clear</string>

    <string name="search_fetching_location_error">Error while fetching the current zipcode. Please manually enter it or try again after sometime.</string>
    <string name="please_fix_all_fields_with_error">Please fix all fields with errors</string>

    <!-- Search Results -->
    <string name="search_results_title">Search Results</string>
    <string name="search_results_total_items">Showing &lt;font color=\"%s\">%d&lt;/font> results for &lt;font color=\"%s\">%s&lt;/font></string>
    <string name="search_results_no_records">No Records</string>

    <!-- Card View -->
    <string name="card_view_zipcode">Zip: %s</string>

    <!-- Wish List -->
    <string name="wish_list_no_records">No Wishes</string>
    <string name="wish_list_total_items">Wishlist total(%d items):</string>

    <!-- Product Activity -->
    <string name="product_tab_title_product">Product</string>
    <string name="product_tab_title_shipping">Shipping</string>
    <string name="product_tab_title_photos">Photos</string>
    <string name="product_tab_title_similar">Similar</string>
    <string name="share_on_facebook">Share</string>
    <string name="product_tab_no_product_details">No product details.</string>
    <string name="product_tab_no_photos">No photos.</string>
    <string name="product_tab_no_shipping_details">No shipping details.</string>
    <string name="product_tab_no_images">No images.</string>
    <string name="product_tab_no_similar_items">No results</string>
    <string name="highlights">Highlights</string>
    <string name="specifications">Specifications</string>
    <string name="subtitle_text">Subtitle</string>
    <string name="price_text">Price</string>
    <string name="brand_text">Brand</string>
    <string name="with_free_shipping">With Free Shipping</string>
    <string name="with_extra_shipping">With $%s Shipping</string>

    <string name="sold_by">Sold By</string>
    <string name="sold_by_store_name">Store Name</string>
    <string name="sold_by_feedback_score">Feedback Score</string>
    <string name="sold_by_popularity">Popularity</string>
    <string name="sold_by_feedback_star">Feedback Star</string>

    <string name="shipping_info">Shipping Info</string>
    <string name="shipping_info_shipping_cost">Shipping Cost</string>
    <string name="shipping_info_global_shipping">Global Shipping</string>
    <string name="shipping_info_handling_time">Handling Time</string>
    <string name="shipping_info_condition">Condition</string>

    <string name="return_policy">Return Policy</string>
    <string name="return_policy_policy">Policy</string>
    <string name="return_policy_returns_within">Returns within</string>
    <string name="return_policy_refund_mode">Refund Mode</string>
    <string name="return_policy_shipped_by">Shipped by</string>

    <string name="error_while_fetching_product_details">Error while fetching Product Details:</string>
    <string name="error_while_fetching_photos">Error while fetching Photos:</string>
    <string name="error_while_fetching_similar_items">Error while fetching similar items:</string>
    <string name="error_facebook_share_data_not_fetched">Please try again after product data is fetched</string>
    <string name="error_facebook_share_data_not_found">Product data not found so can\'t share any details</string>
    <string name="error_facebook_share_data_product_url_not_found">Product URL not found so can\'t share any details</string>

    <string name="facebook_share_message">Buy %s for $%s from Ebay!</string>
    <string name="facebook_share_hash_tag">#CSCI571Spring2019Ebay</string>

    <string name="day_left">%s Day Left</string>
    <string name="days_left">%s Days Left</string>
    <string name="searching_products">Searching Products&#8230;</string>
    <string name="searching_product_detail">Searching Product Details&#8230;</string>
    <string name="searching_similar_items">Searching Similar Items&#8230;</string>
    <string name="searching_photos">Searching Photos&#8230;</string>
    <string name="price">$%s</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="n_a">N/A</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_response_from_server">No response from server</string>
    <string name="not_connected_to_internet">Not connected to internet</string>
    <string name="horizontal_ellipsis">&#8230;</string>
</resources>
